# tiny-fs

./: CLUSTER_DESIGN.md  Cargo.toml  PLAN.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: handlers.rs
src/cluster/: discovery.rs  gossip.rs  mod.rs
src/distributed/: mod.rs
src/erasure/: mod.rs
src/meta/: distributed.rs  mod.rs  models.rs  sqlite.rs
src/policy/: mod.rs
src/replication/: mod.rs
src/service/: bucket.rs  mod.rs  object.rs
src/sharding/: mod.rs
src/storage/: blob_store.rs  mod.rs
src/versioning/: mod.rs
static/: console.css  console.html  console.js
tests/: health_api.rs  object_store_api.rs
